tests/rosetta/out/Zig/a+b.error
zig build: exit status 1
/tmp/a+b.zig:5:15: error: use of undeclared identifier 'int'
