tests/rosetta/out/Zig/a+b.zig
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:53Z
const std = @import("std");

fn user_main() void {
    const a = int(input()); // i32
    const b = int(input()); // i32
    std.debug.print("{any}\n", .{(a + b)});
}

pub fn main() void {
    user_main();
}
